[package]
name = "async-imap"
version = "0.6.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
documentation = "https://docs.rs/async-imap/"
repository = "https://github.com/async-email/async-imap"
homepage = "https://github.com/async-email/async-imap"
description = "Async IMAP client for Rust"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

keywords = ["email", "imap"]
categories = ["email", "network-programming"]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "async-email/async-imap" }
is-it-maintained-open-issues = { repository = "async-email/async-imap" }

[features]
default = ["async-std-native-tls"]

runtime-async-std = ["async-std"]
runtime-tokio = ["tokio"]

async-std-rustls-tls = ["runtime-async-std", "futures-rustls"]
async-std-native-tls = ["runtime-async-std", "async-native-tls/runtime-async-std"]

tokio-rustls-tls = ["runtime-tokio", "tokio-rustls"]
tokio-native-tls = ["runtime-tokio", "async-native-tls/runtime-tokio"]

[dependencies]
imap-proto = "0.16.1"
nom = "7.0"
base64 = "0.13"
chrono = { version = "0.4", default-features = false, features = ["std"] }
pin-utils = "0.1.0-alpha.4"
futures = "0.3.15"
ouroboros = "0.15"
stop-token = "0.7"
byte-pool = "0.2.2"
once_cell = "1.8.0"
log = "0.4.8"
# revert to 1.0.4
thiserror = "=1.0.34"
async-channel = "1.6.1"

async-native-tls = { version = "0.4", default-features = false, optional = true }
tokio-rustls = { version = "0.23.4", optional = true }
futures-rustls = { version = "0.22.2", optional = true }

async-std = { version = "1.8.0", default-features = false, features = ["std"], optional = true }
tokio = { version = "1", features = ["net", "sync", "time", "io-util"], optional = true }


[dev-dependencies]
pretty_assertions = "1.2"
async-std = { version = "1.8.0", features = ["std", "attributes"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

